add remote origin

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+    height: 100%;
+    overflow: overlay;
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.icon-text-button {
+    mat-icon {
+        padding-right: 8px;
+    }
+}
