--- a/src/app/components/operators/from-operator/from-operator.component.html
+++ b/src/app/components/operators/from-operator/from-operator.component.html
@@ -2,8 +2,8 @@
 <mat-divider></mat-divider>
 
 <h2>Initial data</h2>
-<ng-container *ngFor="let value of initialData">
-    <h3>{{ value }}</h3>
+<ng-container>
+    <h3>[{{ initialData }}]</h3>
 </ng-container>
 <h2>Observable data</h2>
 <ng-container *ngFor="let value of data">
