--- a/src/app/components/operators/creational/of-operator/of-operator.component.html
+++ b/src/app/components/operators/creational/of-operator/of-operator.component.html
@@ -14,3 +14,9 @@
 <mat-divider></mat-divider>
 
 <app-init-button (onClickButton)="onClickButton()"></app-init-button>
+
+
+<mat-divider></mat-divider>
+<h2>Important</h2>
+<h3>Finaliza con un complete()</h3>
+<h3>Para simular el operador utilizar spread operator from: of(...list)</h3>
