--- a/src/app/components/operators/from-operator/from-operator.component.html
+++ b/src/app/components/operators/from-operator/from-operator.component.html
@@ -6,6 +6,10 @@
     <h3>[{{ initialData }}]</h3>
 </ng-container>
 <h2>Observable data</h2>
-<ng-container *ngFor="let value of data">
-    <h3>{{ value }}</h3>
+<ng-container>
+    <h3>[{{ data }}]</h3>
 </ng-container>
+
+<mat-divider></mat-divider>
+
+<app-init-button (onClickButton)="onClickButton()"></app-init-button>
