From event operator

--- a/src/app/shared/components/init-button/init-button.component.html
+++ b/src/app/shared/components/init-button/init-button.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="onClick()">Reiniciar emisión</button>
+<button mat-raised-button (click)="onClick()">{{tittle}}</button>
