--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         padding-right: 8px;
     }
 }
+
+.compare {
+  display: flex;
+  gap: 2rem;
+}
