--- a/src/app/components/operators/transformation/concat-map-operator/concat-map-operator.component.html
+++ b/src/app/components/operators/transformation/concat-map-operator/concat-map-operator.component.html
@@ -1,7 +1,7 @@
-<h1>buffer</h1>
+<h1>ConcatMap</h1>
 <mat-divider></mat-divider>
-<h2>Operation buffer</h2>
-<h3>Buffer values until click</h3>
+<h2>Operation concatMap</h2>
+<h3>Emit generated values after each click</h3>
 <mat-divider></mat-divider>
 <app-init-button (onClickButton)="onClickButton()"></app-init-button>
 <mat-divider></mat-divider>
