--- a/src/app/components/operators/creational/from-event-operator/from-event-operator.component.html
+++ b/src/app/components/operators/creational/from-event-operator/from-event-operator.component.html
@@ -7,7 +7,7 @@
   <h3>Emit when user click</h3>
 </ng-container>
 
-<h2>Observer recives data</h2>
+<h2>Observer receives data</h2>
 <ng-container>
   <h3>Avísame cuando hagas click: {{this.data > 0 ? 'Se han hecho ' + this.data + ' clicks': null}}</h3>
 </ng-container>
