--- a/src/app/components/operators/transformation/map-to-operator/map-to-operator.component.html
+++ b/src/app/components/operators/transformation/map-to-operator/map-to-operator.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <h2>Observer recives data</h2>
+    <h2>Observer receives data</h2>
     <ng-container *ngFor="let value of data">
       <h3>{{ value }}</h3>
     </ng-container>
