--- a/src/app/components/operators/transformation/switch-map-operator/switch-map-operator.component.html
+++ b/src/app/components/operators/transformation/switch-map-operator/switch-map-operator.component.html
@@ -1,9 +1,9 @@
-<h1>buffer</h1>
+<h1>switchMap</h1>
 <mat-divider></mat-divider>
-<h2>Operation buffer</h2>
-<h3>Buffer values until click</h3>
+<h2>Operation switchMap</h2>
+<h3>Compare with concatMap and mergeMap</h3>
 <mat-divider></mat-divider>
-  <app-init-button (onClickButton)="onClickButton()"></app-init-button>
+<app-init-button (onClickButton)="onClickButton()"></app-init-button>
 <mat-divider></mat-divider>
 
 <div class="compare">
@@ -21,4 +21,3 @@
     </ng-container>
   </div>
 </div>
-
