--- a/src/app/components/operators/filtering/take-operator/take-operator.component.html
+++ b/src/app/components/operators/filtering/take-operator/take-operator.component.html
@@ -1,7 +1,7 @@
-<h1>last</h1>
+<h1>take</h1>
 <mat-divider></mat-divider>
-<h2>Operation Last</h2>
-<h3>Emit and complete, then get the value </h3>
+<h2>Operation take</h2>
+<h3>Emit and complete after certain number of times </h3>
 <mat-divider></mat-divider>
 <app-init-button (onClickButton)="onClickButton()"></app-init-button>
 <mat-divider></mat-divider>
